--- a/debian/changelog
+++ b/debian/changelog
@@ -1,284 +1,5 @@
-readsb (3.8.1~dev) UNRELEASED; urgency=medium
+readsb (3.14.1592~dev) UNRELEASED; urgency=medium
 
   * In development
-  * Load default web application settings from JSON file.
-  * Introduce a dark theme.
-  * Via dump1090:
-    * Treat ADS-R as a separate source type.
-    * Track ADS-B version separately for direct ADS-B, TIS-B, ADS-R.
-    * Compute ADS-B v0 NACp/SIL from position message type
-    * Correct block duration with PlutoSDR, fix issue #17.
-  * Contribution by wiedehopf and tanerH:
-    * Increase network buffers.
-    * Removed redundant history code.
-    * Filtering for implausible altitudes.
-    * Use multible linked lists for aircraft list.
-    * Add max distance to stats.json.
-    * Network improvements and fixes.
-    * Add VRS JSON network writer.
-    * Fixed push client.
-    * More statistics for beast network input.
-    * Improved VRS JSON generation.
-    * Implementation of non-blocking TCP connection.
-    * Improved handling of multible address records.
-    * Removed legacy push server commands. Replaced by --net-connector.
-    * BeastReduce output - Reduced message rate for non-physical aircraft data.
-    * Aynchronous name resolution based on pthread.
-    * Fix network connection in viewadsb.
 
- -- Michael Wolf <michael@mictronics.de>  Tue, 12 Dec 2019 16:48:13 +0200
-
-readsb (3.8.0) stable; urgency=medium
-
-  * Multi language support in web application.
-  * Uses I18next for internationalization.
-  * Web application reworked and ported to Typescript.
-  * Moved to Leaflet map library.
-  * Replace obsolete usleep in POSIX 2008 with nanosleep.
-  * Improvements to position filtering and relative decoding.
-  * Position decoding bugfixes.
-  * When generating aircraft.json, leave space for the final line.
-  * Forward alert and spi bits to web application.
-  * Added support for GNS5894 receiver hardware.
-
- -- Michael Wolf <michael@mictronics.de>  Tue, 03 Dec 2019 19:11:17 +0200
-
-readsb (3.7.3) stable; urgency=medium
-
-  * First stable release under new package name readsb.
-  * Improve package installation and removal.
-  * Fork detached from dump1090-fa into standalone project and renamed to readsb.
-  * Accept profiles to build package with indivitual or no receiver library dependencies.
-
- -- Michael Wolf <michael@mictronics.de>  Tue, 03 Sep 2019 18:52:56 +0200
-
-readsb (3.7.2) stable; urgency=medium
-
-  * Added configurable re-connection delay for push server support.
-  * Add bladeRF v2.0 Micro support (credits @kazazes)
-
- -- Michael Wolf <michael@mictronics.de>  Fri, 26 Jul 2019 18:47:32 +0200
-
-readsb (3.7.1) stable; urgency=medium
-
-  * Update aircraft database.
-  * Fix web app to make links and button in selected plane dialog accessible.
-  * Removed obsolete code and styles in web app.
-  * jQuery touchpunch updated to bugfixed fork.
-  * Extended aircraft species filter and added engine type filter.
-  * Add OpenFlightMap layer.
-  * Update to OpenLayers v5.3.3 and fix code compatibility.
-  * Fix array out of bounds with gcc-8.
-  * Fix nav_altitude and nav_heading description in README-json.
-  * Bump TSV_VERSION for TAH sense fix.
-  * Fix reversed sense of Track Angle / Heading bit in surface opstatus messages.
-  * Some corrections to JSON doc updates. (upstream /flightaware/dump1090 commit)
-  * Bump TSV_VERSION to reflect extensive comm-b changes. (upstream /flightaware/dump1090 commit)
-  * Improved comm-b decoding and testing. (several upstream /flightaware/dump1090 commits)
-  * Show configurable PageName also in right hand pane info block.
-  * Use RTLSDR as default device type.
-  * Add configuration hint for clean installation.
-  * Add support and build option for bias tee.
-  * Keep backward compatible with pre-2.x bladeRF versions.
-  * Fix an error in the bit range used to decode CF in DF18 messages.
-  * Update README-json to include and explain new fields.
-  * Increase maximum TSV packet size
-  * Fix possible missing \n termination of TSV messages
-  * Fix column index to hide distance when site is not shown.
-  * Fix getting LAT/LON from piaware .env file.
-  * Add accuracy fields and tooltips for ADSB parameters in info block.
-
- -- Michael Wolf <michael@mictronics.de>  Sun, 14 Jul 2019 10:29:04 +0200
-
-readsb (3.7.0) stable; urgency=medium
-
-  * dump1090: Fix Rc decoding errors
-  * dump1090: Compute ADS-B v0 NACp/SIL
-  * dump1090: When generating aircraft.json, leave space for the final line;
-    otherwise the generated json may have trailing garbage
-  * dump1090: Don't update the known-address-set from DF18 messages
-  * Skyview: use heading data for icon orientation if track data is unavailable
-  * Bail out if rtlsdr_read_async() returns early; it probably means we lost
-  * dump1090: Bail out if rtlsdr_read_async() returns early; it probably means we lost
-    the USB device. There was a workaround for this (originally implemented
-    in dump1090-mutability) that got lost in the refactoring needed to support
-    different SDRs. librtlsdr can still be flaky under disconnect conditions, so
-    this won't catch everything.
-  * dump1090: add ENABLED to /etc/default/readsb
-  * dump1090: track FMS and MCP selected altitudes separately
-  * skyview: use whichever selected altitude is available
-  * faup1090: updates to support PiAware 3.7.0
-
- -- Oliver Jowett <oliver@mutability.co.uk>  Fri, 22 Mar 2019 15:58:04 +0000
-
-readsb (3.6.3) stable; urgency=medium
-
-  * Fix port 30003 output (Basestation) timestamp formatting broken in 3.6.0
-  * Ignore altitudes in DF17 "airborne" positions with airGround = ground
-  * SkyView layout change and proper support for extended data fields
-
- -- Oliver Jowett <oliver@mutability.co.uk>  Tue, 11 Sep 2018 14:52:20 +0100
-
-readsb (3.6.2) stable; urgency=medium
-
-  * Update SkyView flags for Libya, Serbia, Montenegro
-  * Improve handling of bad callsigns in ADS-B messages
-  * Update FlightAware aircraft static data export
-  * Add --direct option to enable rtlsdr direct sampling mode
-
- -- Oliver Jowett <oliver@mutability.co.uk>  Fri, 27 Jul 2018 18:32:30 +0100
-
-readsb (3.6.1) stable; urgency=medium
-
-  * fix tracking of NICbaro
-  * Don't translate 7x00 to emergency status, it obscures the source of the
-    data (squawk vs ADS-B v2)
-
- -- Oliver Jowett <oliver@mutability.co.uk>  Mon, 16 Jul 2018 14:58:59 +0100
-
-readsb (3.6.0) stable; urgency=medium
-
-  * dump1090: implement speculative decoding for Comm-B messages, capturing
-    most of the Mode S EHS data:
-    BDS 1,0 (datalink capabilities); BDS 1,7 (GICB capabilities);
-    BDS 2,0 (aircraft identification); BDS 3,0 (ACAS RA);
-    BDS 4,0 (vertical intention); BDS 5,0 (track and turn);
-    BDS 6,0 (heading and speed)
-  * dump1090: implement decoding of most of DO-260A/DO-260B including
-    ADS-B version, autopilot settings, NIC/Rc, NAC, SIL, GVA, etc.
-  * dump1090: aircraft state tracking overhaul; track data age in milliseconds
-  * dump1090: emit newly decoded fields in aircraft.json
-  * Skyview: experimental display of new fields, disabled by default; to
-    enable, set ExtendedData = true in config.js or add #extended to the URL
-  * Skyview: Remove obsolete chartbundle WAC layer, add heli layer
-  * Skyview: Remove Mapzen layer as Mapzen is shutting down
-  * faup1090: Restructure emitted data to include data age and source
-  * faup1090: Include newly decoded fields in reports
-  * dump1090, faup1090: fix use of snprintf to correctly handle buffer overruns
-  * dump1090: don't bother tracking ICAO 000000
-
- -- Oliver Jowett <oliver@mutability.co.uk>  Wed, 09 May 2018 22:34:24 +0100
-
-readsb (3.5.0) stable; urgency=medium
-
-  * SkyView map UI added.
-  * Only enable lighttpd config once, not on every package upgrade in case the
-    user has deliberately disabled it.
-  * Fix AGC gain setting.
-  * Updated the FlightAware aircraft data export.
-  * Minor bugfixes.
-
- -- Oliver Jowett <oliver@mutability.co.uk>  Mon, 03 Apr 2017 17:53:48 +0100
-
-readsb (3.4.0) stable; urgency=medium
-
-  * Add bladeRF support.
-  * Clean up the FlightAware photos link so it works for registrations containing
-    non-alphanumeric characters.
-
- -- Oliver Jowett <oliver@mutability.co.uk>  Thu, 09 Feb 2017 17:41:43 +0000
-
-readsb (3.3.0) stable; urgency=medium
-
-  * Improvements to the Mode A/C demodulator.
-  * Automatically enable Mode A/C if a Beast command requesting it is received.
-    (disable with --no-modeac-auto)
-  * Process the radarcape position message, emit it from faup1090.
-  * If view1090 is started with --modeac, request Mode A/C data from dump1090.
-  * Remove the last traces of the internal webserver.
-  * Updated the FlightAware aircraft data export.
-  * Updated the default package-based maximum range to 360NM to match what
-    piaware-support configured for sdcard installs.
-  * Remove internal webserver code entirely (previously, it was just disabled
-    at compile time).
-  * Tweak the timing reported for Mode S and Mode A/C messages to match how
-    the Beast/Radarcape does it. This affects the interval between Mode S
-    and Mode A/C messages only; intervals between Mode S messages and other
-    Mode S messages, or A/C and other A/C, are unchanged.
-
- -- Oliver Jowett <oliver@mutability.co.uk>  Sun, 15 Jan 2017 13:35:56 +0000
-
-readsb (3.2.0) stable; urgency=medium
-
-  * Fix a stray extra comma in port 30003 output if only GNSS altitude
-    was available
-  * Track CPR encoding type directly rather than inferring it from airground;
-    using airground meant some position messages that should be usable were
-    not used
-  * Mode A/C aircraft association tuning, allows dump1090 to handle much
-    higher A/C rates without chewing tons of CPU
-  * Map: Decrease the maximum marker size shown
-  * Map: Show additional datasource information (TIS-B etc) in table mode
-  * Map: Move the datablock so it doesn't overlap the zoom control
-  * Map: Allow skipping the history load by adding a #nohistory fragment
-    to the URL (e.g. for high latency connections)
-  * view1090-fa: Use ncurses to reduce flicker on remote connections
-  * view1090-fa:  Fix knots -> km/h conversion in interactive mode
-
- -- Oliver Jowett <oliver@mutability.co.uk>  Tue, 25 Oct 2016 23:40:01 +0100
-
-readsb (3.1.0) stable; urgency=medium
-
-  * Update to latest dump1090-mutability master
-  * Preserve more map settings in browser local storage
-  * Add a NEXRAD weather layer (US only) to the map
-  * Decoder overhaul/cleanup
-  * Prefer ES data over Mode S data when both are available
-  * Improved air/ground detection
-  * Lots of map interface changes:
-    * aircraft info moves to a draggable popup rather than top of the sidebar
-    * sidebar is resizeable / hideable
-    * table-only (no map) mode
-    * improved FlightAware aircraft links
-    * configurable units display (metric / imperial / aeronautical)
-    * filter displayed aircraft by altitude
-    * option to show all aircraft tracks
-    * more aircraft markers
-    * use aircraft markers based on aircraft type info where available
-    * scale marker size based on zoom to avoid overlap when zoomed out
-  * Include a greatly expanded aircraft type/registration database (used by the
-    map display) based on the publically-distributable parts of FlightAware's
-    internal database
-  * Try to compute a registration from ICAO address for aircraft where there
-    is a predictable mapping (e.g. US N-registrations)
-  * Try to coexist with other packages (e.g. dump1090-mutability) that also
-    provide a lighttpd config that changes the server.stat-cache-engine setting
-  * Serve actual map data on port 8080, not just a redirect
-  * Redirect requests for /readsb to /readsb/ rather than 404ing.
-
- -- Oliver Jowett <oliver@mutability.co.uk>  Thu, 22 Sep 2016 17:19:01 +0100
-
-readsb (3.0.5) stable; urgency=medium
-
-  * No-change release for PiAware 3.0.5
-
- -- Oliver Jowett <oliver@mutability.co.uk>  Wed, 31 Aug 2016 13:02:42 +0100
-
-readsb (3.0.3) stable; urgency=medium
-
-  * No-change release for PiAware 3.0.3
-
- -- Oliver Jowett <oliver@mutability.co.uk>  Mon, 01 Aug 2016 12:23:47 +0100
-
-readsb (3.0.2) stable; urgency=medium
-
-  * Release for PiAware 3.0.2
-  * Correct the radius of the receiver range circles
-  * Fix errors when selecting a positionless aircraft via the table
-  * Improve Mode A/C reception
-  * Add a Bing roadmap layer option (with a Bing API key)
-
- -- Oliver Jowett <oliver@mutability.co.uk>  Wed, 27 Jul 2016 17:12:53 +0100
-
-readsb (3.0.1) stable; urgency=medium
-
-  * PiAware 3.0.1
-
- -- Oliver Jowett <oliver@mutability.co.uk>  Fri, 15 Jul 2016 13:04:47 +0100
-
-readsb (3.0~flightfeeder) stable; urgency=medium
-
-  * New release series based on dump1090-mutability.
-  * Initial 3.0 release for FlightFeeder images.
-
- -- Oliver Jowett <oliver@mutability.co.uk>  Mon, 11 Jan 2016 17:20:05 +0000
+ -- Matthias Wirth <matthias.wirth@gmail.com>  Mon, 29 Jun 2020 20:34:17 +0200
